# maplibre_flutter_map

./: .gitignore  .metadata  README.md  ffigen.yaml  ffigen_darwin.yaml  pubspec.yaml  run.out  run2.out  trace  trace2
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/maplibre_flutter_map/: MaplibreFlutterMapPlugin.kt
darwin/: maplibre_flutter_map.podspec
darwin/Classes/: FlutterTextureRegistryProxy.swift  MapLibreFlutterTexture.swift  MaplibreFlutterMapPlugin.swift  MaplibreFlutterMapPluginGlobals.swift  maplibre_flutter_map_bindings.dart.m
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/maplibre_flutter_map_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
ios/: maplibre_flutter_map.podspec
ios/Classes/: MaplibreFlutterMapPlugin.swift
ios/Libraries/: libmaplibre_flutter_map_ios.dylib
lib/: map.dart  map_isolate.dart  maplibre_flutter_map.dart
lib/_gen/: bindings.dart  darwin_bindings.dart
lib/widgets/: gandon.dart  maplibre_map.dart  maplibre_map_render_object.dart
macos/: maplibre_flutter_map.podspec
macos/Classes/: MaplibreFlutterMapPlugin.swift
macos/Libraries/: libmaplibre_flutter_map_macos.dylib
src/: .gitignore  BUILD.bazel  MODULE.bazel  bazel-src
src/src/: flutter_map_observer.cpp  flutter_map_observer.hpp  flutter_renderer_frontend.cpp  flutter_renderer_observer.hpp  maplibre_flutter_map.cpp  maplibre_flutter_map.h  src.cpp  src.h
src/src/frontend/: flutter_renderer_frontend.cpp  flutter_renderer_frontend.hpp
src/test/: main.cpp  main_headless.cpp  main_old.cpp
tool/: build_libraries.py  darwin_ffigen.py
