load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")

load("@build_bazel_rules_apple//apple:apple.bzl", "apple_universal_binary")

cc_library(
    name = "maplibre_flutter_map_srcs",
    deps = [
        "//:mbgl-core",
    ],
    srcs = glob(["src/**/*"]),
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    visibility = ["//visibility:private"],
)

# Android

# ... TODO

# iOS

cc_binary(
    name = "maplibre_flutter_map_ios",
    deps = [
        "//platform:ios-sdk",
        ":maplibre_flutter_map_srcs",
    ],
    srcs = [
        ":maplibre_flutter_map_srcs",
    ] + glob(["src/**/*"]),
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    linkopts = [
        "-L/opt/homebrew/opt/icu4c/lib",
    ],
    visibility = ["//visibility:public"],
    linkshared = True,
    linkstatic = True,
)

apple_universal_binary(
    name = "maplibre_flutter_map_ios_universal",
    binary = ":maplibre_flutter_map_ios",
    minimum_os_version = "12.0",
    platform_type="ios",
    forced_cpus=["arm64"],
    visibility = ["//visibility:public"],
)

# macOS

cc_binary(
    name = "maplibre_flutter_map_macos",
    deps = [
        "//platform:macos-objcpp",
        ":maplibre_flutter_map_srcs",
    ],
    srcs = [
        ":maplibre_flutter_map_srcs",
    ] + glob(["src/**/*"]),
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    linkopts = [
        "-L/opt/homebrew/opt/icu4c/lib",
    ],
    visibility = ["//visibility:public"],
    linkshared = True,
    linkstatic = True,
)

# Linux

# ... TODO

# Windows

# ... TODO
